--- a/c2.css
+++ b/c2.css
@@ -66,7 +66,15 @@ input[type=submit]
         cursor: pointer;
     }
 
+.li_class{
 
+}
+.li_class {
+    //margin:20px;
+    display:block;
+    list-style-type: none;
+    font-size: 30px;
+}
 .container .btn 
 {
 
