--- a/c2.css
+++ b/c2.css
@@ -27,7 +27,16 @@ body {
     font: 16px Arial;
 }
 
-
+#p1 {
+    position: absolute;
+    top: 100px;
+    right: 100px;
+}
+#p2 {
+    position: absolute;
+    top: 120px;
+    right: 30px;
+}
 input {
 
     border: 1px solid transparent;
@@ -51,27 +60,48 @@ input[type=text]
         cursor: pointer;
     }
 
-input[type=submit] 
-{
-        background-color: DodgerBlue;
+  #sbmt {
+        background-color: rebeccapurple;
         color: #fff;
         cursor: pointer;
-        width:100px;
-        border-radius:10px;
-}
+        width: 100px;
+        border-radius: 10px;
+        padding:10px;
+        letter-spacing:2px;
+    }
 
-    input[type=submit]:hover
+    #sbmt:hover
     {   border:2px;    
         transition:all 15ms ease-in-out ;
         cursor: pointer;
     }
 
+.wrapper {
+    border-radius:10px;
+    z-index: 1;
+    background-color: silver;
+    
+}
+#a_id{
+
+    text-decoration: none;
+
+}
+.a_class 
+{
+    text-decoration: none;
+}
+.wrapper2{
+    position:absolute;
+    top:160px;
+    right:60px;
+}
+
 .li_class{
 
 }
 .li_class {
-    //margin:20px;
-    display:block;
+   
     list-style-type: none;
     font-size: 30px;
 }
@@ -95,4 +125,37 @@ input[type=submit]
     top:60px;
     left:600px;
 
+}
+
+.btn_class{
+    background-color:rgb(69,208,145);
+    color:white;
+    font-size:12px;
+    border-radius:5px;
+    width:50px;
+    height:30px;
+    letter-spacing:1px;
+  
+}
+.btn_class:hover {
+    border: 2px;
+    transition: all 15ms ease-in-out;
+    cursor: pointer;
+}
+.mail_class {
+    position:absolute;
+    top:500px;
+    right:60px;
+    background-color:rebeccapurple;
+    color: #fff;
+    cursor: pointer;
+    width: 180px;
+    border-radius: 10px;
+    letter-spacing:2px;
+}
+
+.mail_class:hover {
+    border: 2px;
+    transition: all 15ms ease-in-out;
+    cursor: pointer;
 }
