--- a/c2.css
+++ b/c2.css
@@ -21,6 +21,21 @@
     justify-content:center;
 
 }
+.container{
+    display:flex;
+    flex-direction:column;
+}
+.div2 {
+    position: absolute;
+    top: 100px;
+    right: 50px;
+
+}
+.div2 .ul_class.li_class{
+        list-style-type: none;
+        
+    }
+
 
 body {
 
@@ -100,21 +115,43 @@ input[type=text]
 .li_class{
 
 }
-.li_class {
+.ul_class {
    
     list-style-type: none;
-    font-size: 30px;
+    font-size: 20px;
 }
-.container .btn 
-{
 
-    background-color: white;
-    border: none;
-    color: red;
-    padding: 12px 16px;
-    font-size: 16px;
-    cursor: pointer;
+.u_class 
+{
+    list-style-type: none;
+    font-size: 18px;
 }
+
+#close
+{
+    background-color:white;
+    padding:15px;
+    color:red;
+    width:10px;
+    height:15px;
+    font-size:25px;
+    
+
+}
+
+    #close:hover {
+        cursor: pointer;
+        border: 2px;
+        transition: all 15ms ease-in-out;
+    }
+    .container .btn {
+        background-color: white;
+        border: none;
+        color: red;
+        padding: 12px 16px;
+        font-size: 16px;
+        cursor: pointer;
+    }
 .container.btn:hover {
 
         background-color: RoyalBlue;
@@ -158,4 +195,25 @@ input[type=text]
     border: 2px;
     transition: all 15ms ease-in-out;
     cursor: pointer;
+}
+
+@media screen and (max-width: 500px) {
+    .container{
+        width:50%;
+        display:flex;
+        flex-direction:column;
+    }
+    #right {
+        display:none;
+    }
+    #myInput{
+        width:130px;
+    }
+    #sbmt{
+        width:80px;
+    }
+    .wrapper
+    {
+        width:30px;
+    }
 }
