--- a/c2.css
+++ b/c2.css
@@ -10,18 +10,19 @@
     text-align: center;
 }
 
-.conatiner #loading img {
+.container #loading img {
+
         margin-top: 160px;
-    }
-.container span
-{
-    background-color:darkslategrey;
-    
+ }
+.container span{
+
+    background-color:darkslategrey;    
     align-items:center;
     justify-content:center;
 
 }
 .container{
+
     display:flex;
     flex-direction:column;
 }
@@ -34,48 +35,40 @@
 .div2 .ul_class.li_class{
         list-style-type: none;
         
-    }
-
-
-body {
-
-    font: 16px Arial;
 }
 
 #p1 {
+
     position: absolute;
     top: 100px;
     right: 100px;
 }
 #p2 {
+
     position: absolute;
     top: 120px;
     right: 30px;
 }
 input {
 
+    position: relative;
+    width: 250px;
+    height: 40px;
     border: 1px solid transparent;
+    border-radius: 10px;
     background-color: #f1f1f1;
     padding: 10px;
     font-size: 16px;
 }
 
-input[type=text] 
-{
-        position:relative;
-        width:250px;
-        height:40px;
-        border-radius:10px;
-        background-color: #f1f1f1;
-        
-}
-    input[type=text]:hover {
+input:hover {
+
         border: 1px;
         transition: all 15ms ease-in-out;
         cursor: pointer;
-    }
+}
 
-  #sbmt {
+#sbmt {
         background-color: rebeccapurple;
         color: #fff;
         cursor: pointer;
@@ -83,33 +76,41 @@ input[type=text]
         border-radius: 10px;
         padding:10px;
         letter-spacing:2px;
-    }
+}
 
-    #sbmt:hover
-    {   border:2px;    
-        transition:all 15ms ease-in-out ;
-        cursor: pointer;
-    }
+#sbmt:hover{
+    border:2px;    
+    transition:all 15ms ease-in-out ;
+    cursor: pointer;
+}
 
 .wrapper {
+
+    display:block;
+    width:500px;
     border-radius:10px;
-    z-index: 1;
-    background-color: silver;
-    
+    background-color: silver;   
 }
-#a_id{
 
-    text-decoration: none;
-
-}
-.a_class 
+.watchListItem
 {
+    position:absolute;
+    display:flex;
+    top:100px;
+    right:80px;
+    border:10px;
+}
+
+.a_class, #a_id {
     text-decoration: none;
 }
-.wrapper2{
-    position:absolute;
-    top:160px;
-    right:60px;
+
+.l_class{
+  
+ 
+    top:100px;
+    right:60px;   
+    display:block;
 }
 
 .li_class{
@@ -134,24 +135,27 @@ input[type=text]
     color:red;
     width:10px;
     height:15px;
-    font-size:25px;
-    
+    font-size:25px;   
 
 }
 
-    #close:hover {
+#close:hover {
+
         cursor: pointer;
         border: 2px;
         transition: all 15ms ease-in-out;
-    }
-    .container .btn {
+}
+    
+.container .btn {
+
         background-color: white;
         border: none;
         color: red;
         padding: 12px 16px;
         font-size: 16px;
         cursor: pointer;
-    }
+}
+
 .container.btn:hover {
 
         background-color: RoyalBlue;
@@ -172,8 +176,13 @@ input[type=text]
     width:50px;
     height:30px;
     letter-spacing:1px;
+    
   
 }
+.u_class {
+
+}
+
 .btn_class:hover {
     border: 2px;
     transition: all 15ms ease-in-out;
@@ -181,8 +190,8 @@ input[type=text]
 }
 .mail_class {
     position:absolute;
-    top:500px;
-    right:60px;
+    top:700px;
+    right:30px;
     background-color:rebeccapurple;
     color: #fff;
     cursor: pointer;
